# social_models

./: discription  pyproject.toml  sthink
human_meat/: discription.txt  population_fitting.py  recursion_get_.py  think.txt
