[tool.poetry]
name = "social-model"
version = "0.1.0"
description = "make a model for girl's meet produce and use for boy."
authors = ["wuyanyiduiGitHub <3535912361@qq.com>"]
license = "GPL-3.0-only"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
